[package]
name = "links"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dashmap = { version = "6.1.0", features = ["inline"] }
futures-util = "0.3.31"
hashbrown = "0.15.4"
regex = "1.11.1"
reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["macros", "parking_lot", "rt-multi-thread", "signal", "tracing"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "parking_lot"] }
